# SuperSpreader

./: .env.example  Cargo.toml  README.md  main.py  requirements.txt  rust-toolchain.toml  tmp_smoke.sqlite  tmp_smoke.sqlite-shm  tmp_smoke.sqlite-wal  tmp_ws_smoke.py
.cargo/: config.toml
config/: settings.py
connectors/external_odds/: base.py  disabled.py  mock.py
connectors/polymarket/: gamma_poll_stream.py  market_discovery.py  mock_stream.py  ws_stream.py
data/: polymarket_trader.sqlite-shm  polymarket_trader.sqlite-wal
docs/: LOCAL_RUN.md
execution/: base.py  live.py  paper.py
monitoring/: dashboard.py  github_publisher.py  publisher_status.py  repo_publisher.py  web_dashboard.py
ops/telemetry/: latest.md
risk/: portfolio.py  rules.py
src/: bot.rs  config.rs  dashboard.rs  feed_handler.rs  hft_strategy.rs  main.rs  market_selector.rs  paper_broker.rs  risk_engine.rs  store.rs  utils.rs
storage/: sqlite.py
strategies/: base.py  cross_venue.py  market_making.py
tests/: test_gamma_feed_heartbeat.py  test_market_making_fair_source.py  test_paper_broker_maker_touch.py  test_pricing.py  test_risk.py  test_settings_feed_lag_defaults.py  test_signals.py  test_store_reset.py  test_ws_feed_payload_shapes.py  test_ws_feed_timestamps.py
trading/: app.py  feed.py  state.py  types.py
utils/: logging.py  pricing.py
